use wildcard include in tsconfig.json

--- a/Box2D/HelloWorld/tsconfig.json
+++ b/Box2D/HelloWorld/tsconfig.json
@@ -10,7 +10,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": false
   },
-  "files": [
-    "HelloWorld.ts"
+  "include": [
+    "**/*.ts"
   ]
 }
