--- a/Box2D/Box2D/tsconfig.json
+++ b/Box2D/Box2D/tsconfig.json
@@ -10,59 +10,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": false
   },
-  "files": [
-    "Box2D.ts",
-    "Common/b2Settings.ts",
-    "Common/b2Math.ts",
-    "Common/b2Draw.ts",
-    "Common/b2Timer.ts",
-    "Common/b2GrowableStack.ts",
-    "Common/b2BlockAllocator.ts",
-    "Common/b2StackAllocator.ts",
-    "Collision/b2Collision.ts",
-    "Collision/b2Distance.ts",
-    "Collision/b2BroadPhase.ts",
-    "Collision/b2DynamicTree.ts",
-    "Collision/b2TimeOfImpact.ts",
-    "Collision/b2CollideCircle.ts",
-    "Collision/b2CollidePolygon.ts",
-    "Collision/b2CollideEdge.ts",
-    "Collision/Shapes/b2Shape.ts",
-    "Collision/Shapes/b2CircleShape.ts",
-    "Collision/Shapes/b2PolygonShape.ts",
-    "Collision/Shapes/b2EdgeShape.ts",
-    "Collision/Shapes/b2ChainShape.ts",
-    "Dynamics/b2Fixture.ts",
-    "Dynamics/b2Body.ts",
-    "Dynamics/b2World.ts",
-    "Dynamics/b2WorldCallbacks.ts",
-    "Dynamics/b2Island.ts",
-    "Dynamics/b2TimeStep.ts",
-    "Dynamics/b2ContactManager.ts",
-    "Dynamics/Contacts/b2Contact.ts",
-    "Dynamics/Contacts/b2ContactFactory.ts",
-    "Dynamics/Contacts/b2ContactSolver.ts",
-    "Dynamics/Contacts/b2CircleContact.ts",
-    "Dynamics/Contacts/b2PolygonContact.ts",
-    "Dynamics/Contacts/b2PolygonAndCircleContact.ts",
-    "Dynamics/Contacts/b2EdgeAndCircleContact.ts",
-    "Dynamics/Contacts/b2EdgeAndPolygonContact.ts",
-    "Dynamics/Contacts/b2ChainAndCircleContact.ts",
-    "Dynamics/Contacts/b2ChainAndPolygonContact.ts",
-    "Dynamics/Joints/b2Joint.ts",
-    "Dynamics/Joints/b2JointFactory.ts",
-    "Dynamics/Joints/b2AreaJoint.ts",
-    "Dynamics/Joints/b2DistanceJoint.ts",
-    "Dynamics/Joints/b2FrictionJoint.ts",
-    "Dynamics/Joints/b2GearJoint.ts",
-    "Dynamics/Joints/b2MotorJoint.ts",
-    "Dynamics/Joints/b2MouseJoint.ts",
-    "Dynamics/Joints/b2PrismaticJoint.ts",
-    "Dynamics/Joints/b2PulleyJoint.ts",
-    "Dynamics/Joints/b2RevoluteJoint.ts",
-    "Dynamics/Joints/b2RopeJoint.ts",
-    "Dynamics/Joints/b2WeldJoint.ts",
-    "Dynamics/Joints/b2WheelJoint.ts",
-    "Rope/b2Rope.ts"
+  "include": [
+    "**/*.ts"
   ]
 }
