--- a/Box2D/Testbed/tsconfig.json
+++ b/Box2D/Testbed/tsconfig.json
@@ -10,66 +10,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": false
   },
-  "files": [
-    "Testbed.ts",
-    "Framework/Main.ts",
-    "Framework/DebugDraw.ts",
-    "Framework/Test.ts",
-    "Tests/TestEntries.ts",
-    "Tests/AddPair.ts",
-    "Tests/ApplyForce.ts",
-    "Tests/BlobTest.ts",
-    "Tests/BodyTypes.ts",
-    "Tests/Breakable.ts",
-    "Tests/Bridge.ts",
-    "Tests/BulletTest.ts",
-    "Tests/BuoyancyTest.ts",
-    "Tests/Cantilever.ts",
-    "Tests/Car.ts",
-    "Tests/Chain.ts",
-    "Tests/CharacterCollision.ts",
-    "Tests/CollisionFiltering.ts",
-    "Tests/CollisionProcessing.ts",
-    "Tests/CompoundShapes.ts",
-    "Tests/Confined.ts",
-    "Tests/ContinuousTest.ts",
-    "Tests/ConvexHull.ts",
-    "Tests/ConveyorBelt.ts",
-    "Tests/DistanceTest.ts",
-    "Tests/Dominos.ts",
-    "Tests/DumpShell.ts",
-    "Tests/DynamicTreeTest.ts",
-    "Tests/EdgeShapes.ts",
-    "Tests/EdgeTest.ts",
-    "Tests/Gears.ts",
-    "Tests/Mobile.ts",
-    "Tests/MobileBalanced.ts",
-    "Tests/MotorJoint.ts",
-    "Tests/OneSidedPlatform.ts",
-    "Tests/Pinball.ts",
-    "Tests/PolyCollision.ts",
-    "Tests/PolyShapes.ts",
-    "Tests/Prismatic.ts",
-    "Tests/Pulleys.ts",
-    "Tests/Pyramid.ts",
-    "Tests/RayCast.ts",
-    "Tests/Revolute.ts",
-    "Tests/Rope.ts",
-    "Tests/RopeJoint.ts",
-    "Tests/SensorTest.ts",
-    "Tests/ShapeEditing.ts",
-    "Tests/SliderCrank.ts",
-    "Tests/SphereStack.ts",
-    "Tests/TestCCD.ts",
-    "Tests/TestRagdoll.ts",
-    "Tests/TestStack.ts",
-    "Tests/TheoJansen.ts",
-    "Tests/Tiles.ts",
-    "Tests/TimeOfImpact.ts",
-    "Tests/Tumbler.ts",
-    "Tests/VaryingFriction.ts",
-    "Tests/VaryingRestitution.ts",
-    "Tests/VerticalStack.ts",
-    "Tests/Web.ts"
+  "include": [
+    "**/*.ts"
   ]
 }
