--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "box2d.ts",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./Box2D/Box2D/Box2D.js",
+  "types": "./Box2D/Box2D/Box2D.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
