--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "tsc -p Box2D/Testbed",
     "watch": "tsc -p Box2D/Testbed --watch",
-    "debug": "npx http-server -c-1 -o",
+    "start": "http-server -c-1 -o",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,10 +20,11 @@
     "url": "https://github.com/flyover/box2d.ts/issues"
   },
   "homepage": "https://github.com/flyover/box2d.ts#readme",
-  "dependencies": {
+  "devDependencies": {
     "@types/systemjs": "^0.20.6",
     "plugin-typescript": "^8.0.0",
     "systemjs": "^0.21.4",
-    "typescript": "^2.9.1"
+    "typescript": "^2.9.1",
+    "http-server": "^0.11.1"
   }
 }
