--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "tsc -p Box2D/Testbed",
     "watch": "tsc -p Box2D/Testbed --watch",
-    "start": "http-server -c-1 -o",
+    "start": "concurrently \"tsc -p Box2D/Testbed --watch\" \"http-server -c-1 -o\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,9 +22,10 @@
   "homepage": "https://github.com/flyover/box2d.ts#readme",
   "devDependencies": {
     "@types/systemjs": "^0.20.6",
+    "concurrently": "^3.5.1",
+    "http-server": "^0.11.1",
     "plugin-typescript": "^8.0.0",
     "systemjs": "^0.21.4",
-    "typescript": "^2.9.1",
-    "http-server": "^0.11.1"
+    "typescript": "^2.9.1"
   }
 }
