--- a/Box2D/Box2D/tsconfig.json
+++ b/Box2D/Box2D/tsconfig.json
@@ -1,13 +1,14 @@
 {
   "compilerOptions": {
-    "target": "ES2016",
-    "module": "system",
+    "target": "es5",
+    "module": "amd",
     "strict": true,
     "noImplicitAny": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "noUnusedLocals": true,
-    "inlineSourceMap": true
+    "inlineSourceMap": true,
+    "outFile": "../../dist/box2d.dev.js"
   },
   "include": [
     "**/*.ts"
