--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "@flyover/box2d",
   "version": "1.0.0",
   "description": "A TypeScript port of Box2D",
-  "main": "./Box2D/Box2D/Box2D.js",
+  "main": "./dist/box2d.dev.js",
   "types": "./Box2D/Box2D/Box2D.ts",
   "scripts": {
     "build": "tsc -p Box2D/Testbed",
+    "build-box2d": "tsc -p Box2D/Box2D",
     "watch": "tsc -p Box2D/Testbed --watch",
-    "debug": "npx http-server -c-1 -o",
+    "start": "concurrently \"tsc -p Box2D/Testbed --watch\" \"http-server -c-1 -o\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,13 +21,13 @@
     "url": "https://github.com/flyover/box2d.ts/issues"
   },
   "homepage": "https://github.com/flyover/box2d.ts#readme",
-  "dependencies": {
-    "@types/systemjs": "^0.20.6"
-  },
   "devDependencies": {
+    "@types/systemjs": "^0.20.6",
+    "concurrently": "^3.5.1",
     "plugin-typescript": "^8.0.0",
     "systemjs": "^0.21.4",
     "tslint": "^5.10.0",
-    "typescript": "^2.9.1"
+    "typescript": "^2.9.1",
+    "http-server": "^0.11.1"
   }
 }
