fix tsconfig paths

--- a/Box2D/Testbed/tsconfig.json
+++ b/Box2D/Testbed/tsconfig.json
@@ -12,10 +12,8 @@
     "paths": {
       "Box2D": [ "../Box2D/Box2D" ],
       "Box2D/*": [ "../Box2D/*" ],
-      "Contributions": [ "../Contributions" ],
-      "Contributions/*": [ "../Contributions/*" ],
       "Testbed": [ "./Testbed" ],
-      "Testbed/*": [ "./Testbed/*" ],
+      "Testbed/*": [ "./*" ]
     }
   },
   "include": [
