--- a/Box2D/HelloWorld/tsconfig.json
+++ b/Box2D/HelloWorld/tsconfig.json
@@ -12,7 +12,9 @@
     "baseUrl": ".",
     "paths": {
       "Box2D": [ "../Box2D/Box2D" ],
-      "Box2D/*": [ "../Box2D/*" ]
+      "Box2D/*": [ "../Box2D/*" ],
+      "HelloWorld": [ "./HelloWorld" ],
+      "HelloWorld/*": [ "./*" ]
     }
   },
   "include": [
