--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "@flyover/box2d",
   "version": "1.0.0",
   "description": "A TypeScript port of Box2D",
-  "main": "./Box2D/Box2D/Box2D.js",
+  "main": "./Box2D/Build/Box2D/dist/bundle.js",
   "types": "./Box2D/Box2D/Box2D.ts",
   "scripts": {
     "build": "tsc -p Box2D/Testbed",
     "watch": "tsc -p Box2D/Testbed --watch",
     "debug": "npx http-server -c-1 -o",
+    "dist": "(cd Box2D/Build/Box2D && rollup -c)",
+    "dist-helloworld": "(cd Box2D/Build/HelloWorld && rollup -c)",
+    "dist-testbed": "(cd Box2D/Build/Testbed && rollup -c)",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,6 +28,8 @@
   },
   "devDependencies": {
     "plugin-typescript": "^8.0.0",
+    "rollup": "^0.60.7",
+    "rollup-plugin-typescript2": "^0.15.0",
     "systemjs": "^0.21.4",
     "tslint": "^5.10.0",
     "typescript": "^2.9.2"
