--- a/Box2D/tsconfig.json
+++ b/Box2D/tsconfig.json
@@ -8,7 +8,7 @@
     "noImplicitThis": true,
     "noUnusedLocals": true,
     "inlineSourceMap": true,
-    "outDir": "dist"
+    "outDir": "../dist"
   },
   "include": [
     "**/*.ts"
