update dependencies; no implicit override

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,11 @@
     "module": "system",
     "strict": true,
     "noImplicitAny": true,
+    "noImplicitOverride": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "noUnusedLocals": true,
+    "useUnknownInCatchVariables": true,
     "outDir": "./build",
     "declaration": true,
     "sourceMap": true,
