--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.1",
   "description": "A TypeScript port of Box2D",
   "main": "./dist/box2d.umd.js",
+  "type": "module",
   "types": "./build/index.d.ts",
   "scripts": {
     "clean": "npm run clean-box2d",
@@ -46,8 +47,8 @@
   },
   "devDependencies": {
     "http-server": "^14.0.0",
-    "rollup": "^2.32.1",
-    "rollup-plugin-typescript2": "^0.31.1",
-    "typescript": "^4.5.2"
+    "rollup": "^3.25.3",
+    "rollup-plugin-typescript2": "^0.23.0",
+    "typescript": "^5.1.6"
   }
 }
